TP1 completed everything working

--- a/TP1_dudnicp_deleplaa/CMakeLists.txt
+++ b/TP1_dudnicp_deleplaa/CMakeLists.txt
@@ -5,6 +5,10 @@ project(TP1_dudnicp_deleplaa)
 
 set(CMAKE_CXX_FLAGS "-g -Wall")
 
-add_executable(exe src/Test_Dvector.cpp
-)
+set(SOURCE_FILES 
+src/Dvector.cpp
+src/Dvector.h
+src/Test_Dvector.cpp)
+
+add_executable(test_tp1 ${SOURCE_FILES})
 
