ParkMillerGenerator and XorShiftGenerator

--- a/TP3_dudnicp_deleplaa/.vscode/settings.json
+++ b/TP3_dudnicp_deleplaa/.vscode/settings.json
@@ -10,6 +10,7 @@
         "limits": "cpp",
         "new": "cpp",
         "*.tcc": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "optional": "cpp"
     }
 }
