--- a/TP2_dudnicp_deleplaa/test/CMakeLists.txt
+++ b/TP2_dudnicp_deleplaa/test/CMakeLists.txt
@@ -4,6 +4,6 @@ file(GLOB allTests *.cpp)
 
 foreach(test ${allTests})
     get_filename_component(testName ${test} NAME_WE)
-    add_executable(${testName}.exe test)
-    target_link_libraries(${testName}.exe dvector)
+    add_executable(${testName} ${test})
+    target_link_libraries(${testName} dvector)
 endforeach(test)
