TP2 : added examples

--- a/TP2_dudnicp_deleplaa/CMakeLists.txt
+++ b/TP2_dudnicp_deleplaa/CMakeLists.txt
@@ -6,6 +6,7 @@ project(TP2_dudnicp_deleplaa)
 
 add_subdirectory(src)
 add_subdirectory(doc)
+add_subdirectory(examples)
 add_subdirectory(test)
 enable_testing()
 
