--- a/TP3_dudnicp_deleplaa/CMakeLists.txt
+++ b/TP3_dudnicp_deleplaa/CMakeLists.txt
@@ -4,17 +4,17 @@ set(CMAKE_CXX_FLAGS "-g -Wall")
 
 project(TP3_dudnicp_deleplaa)
 
-#add_subdirectory(src)
+add_subdirectory(src)
 add_subdirectory(doc)
-# add_subdirectory(examples)
+add_subdirectory(examples)
 add_subdirectory(test)
-# enable_testing()
+enable_testing()
 
-# file(GLOB allTests test/*.cpp)
+file(GLOB allTests test/*.cpp)
 
-# foreach(test ${allTests})
-#     get_filename_component(testName ${test} NAME_WE)
-#     add_test(NAME ${testName} COMMAND ${testName})
-# endforeach(test)
+foreach(test ${allTests})
+    get_filename_component(testName ${test} NAME_WE)
+    add_test(NAME ${testName} COMMAND ${testName})
+endforeach(test)
 
-# add_custom_target(check COMMAND make test VERBATIM)
+add_custom_target(check COMMAND make test VERBATIM)
