--- a/TP3_dudnicp_deleplaa/src/CMakeLists.txt
+++ b/TP3_dudnicp_deleplaa/src/CMakeLists.txt
@@ -1,3 +1,8 @@
 project(rng)
+
+find_package(Boost)
+
+include_directories(${Boost_INCLUDE_DIRS})
+
 file(GLOB sources *.cpp)
 add_library(${PROJECT_NAME} ${sources})
